# ClashControlEngine

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  claude.md  pyproject.toml
.github/workflows/: auto-release.yml  release.yml
src/clashcontrol_engine/: __init__.py  __main__.py  _bootstrap.py  cli.py  daemon.py  engine.py  install.py  intersection.py  protocol.py  server.py  sweep.py  updater.py
tests/: test_daemon.py  test_engine.py  test_install.py  test_server.py  test_updater.py
